--- a/package.json
+++ b/package.json
@@ -50,14 +50,18 @@
     "http-proxy-middleware": "0.17.2",
     "jest": "^23.5.0",
     "json-loader": "0.5.4",
+    "nib": "^1.1.2",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
+    "rupture": "^0.7.1",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "truffle-contract": "^1.1.8",
     "truffle-solidity-loader": "0.0.8",
     "url-loader": "0.5.7",
@@ -68,7 +72,7 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
-    "react": "^15.4.2",
+    "react": "^15.6.2",
     "react-dom": "^15.4.2"
   },
   "scripts": {
