--- a/package.json
+++ b/package.json
@@ -22,24 +22,26 @@
   "homepage": "https://github.com/hiddentao/blockchain-battleship#readme",
   "devDependencies": {
     "autoprefixer": "6.5.1",
-    "babel-core": "6.17.0",
-    "babel-eslint": "7.1.1",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^8.2.6",
     "babel-jest": "17.0.2",
-    "babel-loader": "6.2.7",
-    "babel-preset-react-app": "^2.0.1",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-react-display-name": "^6.25.0",
+    "babel-preset-react-app": "2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.0",
     "detect-port": "1.0.1",
-    "eslint": "3.8.1",
-    "eslint-config-react-app": "^0.5.0",
-    "eslint-loader": "1.6.0",
-    "eslint-plugin-flowtype": "2.21.0",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.4.1",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
@@ -56,7 +58,9 @@
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
+    "react-redux": "^5.0.7",
     "recursive-readdir": "2.1.0",
+    "redux-actions": "^2.6.1",
     "rupture": "^0.7.1",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
@@ -72,8 +76,12 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "lodash": "^4.17.10",
     "react": "^15.6.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -115,9 +123,10 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "transform-react-display-name",
+      "transform-decorators-legacy"
     ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   }
 }
