--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "object-curly-newline": ["error", { "consistent": true }],
     "function-paren-newline": ["error", "consistent"],
     "global-require": 0,
+    "no-console": 0,
     "class-methods-use-this": 0,
     "no-underscore-dangle": 0,
     "import/prefer-default-export": 0,
