--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "react-dom": "^15.4.2",
     "react-router": "^4.3.1",
     "redux": "^4.0.0",
-    "web3": "^1.0.0-beta.35"
+    "web3": "^1.0.0-beta.35",
+    "web3-utils": "^1.0.0-beta.35"
   },
   "scripts": {
     "start": "node scripts/start.js",
