--- a/package.json
+++ b/package.json
@@ -75,9 +75,11 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "array-buffer-to-hex": "^1.0.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^4.4.1",
     "dotenv": "^2.0.0",
+    "hex-to-array-buffer": "^1.1.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "lodash": "^4.17.10",
