--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "function-paren-newline": ["error", "consistent"],
     "global-require": 0,
     "no-console": 0,
+    "no-mixed-operators": 0,
     "class-methods-use-this": 0,
     "no-underscore-dangle": 0,
     "import/prefer-default-export": 0,
