--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react": "^15.6.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.3.1",
+    "react-table": "^6.8.6",
     "react-tabs": "^2.2.2",
     "redux": "^4.0.0",
     "web3": "^1.0.0-beta.35",
