--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ cache: yarn
 branches:
   only:
   - source
+node_js:
+  - stable
 before_install:
   - openssl aes-256-cbc -K $encrypted_2510e7b7233a_key -iv $encrypted_2510e7b7233a_iv -in .deploy-key.tgz.enc -out .deploy-key.tgz -d
   - tar -xzvf ./.deploy-key.tgz
