--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_2510e7b7233a_key -iv $encrypted_2510e7b7233a_iv -in .deploy-key.tgz.enc -out .deploy-key.tgz -d
   - tar -xzvf ./.deploy-key.tgz
 script:
+  - yarn truffle compile
   - yarn build
   - chmod 600 ./.deploy-key/id_rsa
   - eval "$(ssh-agent -s)"
