--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "deploy": "gh-pages -d build_webpack -o origin -b master",
+    "deploy": "gh-pages -d build_webpack -o origin -b master -r git@github.com:eth-battleship/eth-battleship.github.io.git",
     "truffle": "truffle"
   },
   "jest": {
