--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "stylus-loader": "^3.0.2",
     "truffle": "^4.1.14",
     "truffle-contract": "^3.0.6",
+    "truffle-hdwallet-provider": "^0.0.6",
     "truffle-solidity-loader": "0.0.8",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
